install validate.js

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "knex": "^0.21.17",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "validate.js": "^0.13.1"
   }
 }
