--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "knex migrate:latest && node ./bin/www",
+    "test": "mocha --timeout 100000"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -17,5 +19,11 @@
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "validate.js": "^0.13.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.0",
+    "chai-http": "^4.3.0",
+    "chai-subset": "^1.6.0",
+    "mocha": "^8.3.0"
   }
 }
