--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "knex migrate:latest && node ./bin/www",
     "test": "mocha --timeout 100000"
   },
   "dependencies": {
