--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-host = localhost
-database = encurtador
-user = encurtador
-password = encurtador
-url=http://localhost:8081
+HOST = localhost
+DATABASE = encurtador
+USER = encurtador
+PASSWORD = encurtador
+URL=http://localhost:8081
 PORT=8081
